# plog

./: .gitignore  alembic.ini  app.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 04943737df64_add_document_table.py
etc/: README.md  podman-compose.yaml
r&d/01_index_generator/: README.md  document_loader.py  embedder.py  index_generator.py  text_spliter.py
server/admin/controllers/: admin_controller.py
server/common/: database.py  exception.py  logger.py  model.py  response.py  status.py
server/document/: status.py
server/document/controllers/: api_controller.py  view_controller.py
server/document/controllers/request/dto/: dto.py
server/document/controllers/request/vo/: factory.py  vo.py
server/document/controllers/response/: dto.py
server/document/controllers/validator/: api_validator.py
server/document/models/: __init__.py  document.py
server/document/service/: api_service.py
server/file/controllers/: file_controller.py
server/user/controllers/: user_controller.py
static/admin/: main.css
static/document/: main.css  main.js
static/user/: main.css
templates/admin/: main.html
templates/document/: main.html
templates/file/: upload.html
templates/user/: main.html
