[tool.poetry]
name = "plog"
version = "0.1.0"
description = "RAG project using Flask"
authors = ["plo <dladlsgur3334@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# flask
flask = "^2.3"
flask-sqlalchemy = "^3.0"
flask-migrate = "^4.0"
flask-restx = "^1.1"

# langchain
langchain = ">=0.3.16,<0.4.0"
langchain-community = ">=0.3.0"
langchain-core = ">=0.3.32,<0.4.0"
openai = "^1.1.0"
tiktoken = "^0.5.2"

# database
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.11"

# statics
pandas = "^2.1"
numpy = "^1.26"

# reporting
matplotlib = "^3.8"
seaborn = "^0.13"
plotly = "^5.17"

# message broker
celery = "^5.3"
redis = "^5.0"

# test
pytest = "^7.4"
pytest-flask = "^1.2"
coverage = "^7.3"
flake8 = "^6.1"
mypy = "^1.6"
black = "^23.9"

# utils
requests = "^2.31"
python-dotenv = "^1.0"
loguru = "^0.7"
fastapi = "^0.100"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"